xterm (229-1) UNRELEASED; urgency=low

  * Fix typo in uxterm(1) (LP: #128136).
  * New upstream release
    + undo an incorrect fix for a memory leak in patch #209
      (closes: #435858).
  * Stop installing the .desktop files and adapt xterm.menu to the new menu
    structure.

 -- Julien Cristau <jcristau@debian.org>  Mon, 13 Aug 2007 02:11:11 +0200

xterm (228-1) unstable; urgency=low

  [ Julien Cristau ]
  * New upstream release
    + fix missing assignment for UTF-8 parsing in widget initialization
      (closes: #403360).
    + correct index expression used to set line-wrapping flag, making
      selection from scrollback work consistently (closes: #430121).
  * Refresh 901_xterm_manpage.diff.

  [ Brice Goglin ]
  * Fix debian/rules to not be confused by ~/.quiltrc or QUILT_PATCHES,
    closes: #369920.

 -- Julien Cristau <jcristau@debian.org>  Mon, 23 Jul 2007 03:43:32 +0200

xterm (226-1) unstable; urgency=low

  [ Branden Robinson ]
  * Remove debian/NEWS; the events it attested to (like the "upcoming 7.0
    modularization" are no longer news, and are in the past.

  [ Julien Cristau ]
  * Configure with --with-tty-group=tty, to prevent security problems in case
    of buggy build environment (closes: #349142).
  * New upstream release.
    + fix  an  infinite  loop  when  showing  a  2-column character in a
      1-column screen (closes: #426863).
    + add  XF86Paste  and  SunPaste  to the default translations
      (closes: #422521, patch by Bernhard R Link).
    + improve  permissions  logic  when  closing pseudo-terminal
      (closes: #12261, patch by Nathanael Nerode, analysis by Richard
      Braakman).
    + add  a check in case someone tries to call the popup-menu() action
      on a menu which is not initialized (closes: #426364).
    + fix error-checking on internal font switching for "Selection" menu
      entry (closes: #421523).
    + amend select/paste change from patch #225 by limiting it to